D4G-143: Fix mobile spacing for spacing-component.

--- a/docroot/themes/custom/drupal4gov/css/base/css-variables.css
+++ b/docroot/themes/custom/drupal4gov/css/base/css-variables.css
@@ -16,7 +16,7 @@
   --spacing-xl: 32px;
   --spacing-xxl: 64px;
   --spacing-xxxl: 128px;
-  --spacing-component: 200px;
+  --spacing-component: 100px;
   --body: 17px;
   --h1: 40px;
   --h2: 28px;
@@ -48,5 +48,6 @@
     --h1: 50px;
     --h2: 32px;
     --h3: 22px;
+    --spacing-component: 200px;
   }
 }
